# sub-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  nurfile  pyproject.toml
sub_pre_commit/: cli.py  run.py
