[tool.poetry]
name = "sub-pre-commit"
version = "3.0.1"
description = "Run pre-commit on sub folders."
authors = ["David Danier <danier@team23.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
pre-commit = "^3.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-builtins = "^1.5.3"
flake8-annotations = "^2.9.1"
flake8-commas = "^2.1.0"
flake8-isort = "^4.2.0"
flake8-debugger = "^4.1.2"

[tool.poetry.scripts]
sub-pre-commit = 'sub_pre_commit.cli:run'
sub-pre-commit-run = 'sub_pre_commit.run:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
