[project]
name = "sub-pre-commit"
version = "4.4.0"
description = "Run pre-commit on sub folders."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "David Danier", email = "david.danier@gmail.com"},
]
license = "MIT"
dependencies = [
    "pre-commit==4.4.0",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[project.scripts]
sub-pre-commit = 'sub_pre_commit.cli:run'
sub-pre-commit-run = 'sub_pre_commit.run:run'

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sub_pre_commit"
module-root = ""
